--- a/css/docs.css
+++ b/css/docs.css
@@ -60,9 +60,9 @@ body {
 
 /* Subnav */
 .subnav {
-  margin-bottom: 60px;
   width: 100%;
   height: 36px;
+  position: absolute;
   background-color: #eeeeee; /* Old browsers */
   background-repeat: repeat-x; /* Repeat the gradient */
   background-image: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* FF3.6+ */
@@ -76,6 +76,9 @@ body {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+}
+header+section {
+  margin-top: 60px;
 }
 .subnav .nav {
   margin-bottom: 0;
