--- a/partials/main.html
+++ b/partials/main.html
@@ -1,9 +1,11 @@
 
 <div ng-app="ng-app">
-  <h2>The World, in vector format</h2>
   <div ng-controller="MapCtrl">
-    <div class="row">
-      <div id="earth" worldmap="worldmap" class="span12"></div>
+    <div class="row-fluid">
+      <div class="span12">
+        <div id="pop-holder" style="z-index:10"></div>
+        <div id="earth" worldmap="worldmap"></div>
+      </div>
     </div>
   </div>
 </div>
