--- a/tco/views/main.html
+++ b/tco/views/main.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-12">
         <div class="page-header">
             <h1>Tablet TCO Calculator</h1>
         </div>
@@ -202,7 +202,7 @@
                                             </td>
                                             <td>{{ rscVars[i].industry }}</td>
                                         </tr>
-                                        <tr>
+                                        <tr class="bolder">
                                             <td><strong>
                                                 Productivity loss from hardware
                                                 failure</strong></td>
@@ -232,7 +232,7 @@
                                             </td>
                                             <td>{{ rscVars[i].industry }}</td>
                                         </tr>
-                                        <tr>
+                                        <tr class="bolder">
                                             <td><strong>IT Support for HW
                                                     Downtime</strong></td>
                                             <td><strong>
@@ -261,7 +261,7 @@
                                             </td>
                                             <td>{{ rscVars[i].industry }}</td>
                                         </tr>
-                                        <tr>
+                                        <tr class="bolder">
                                             <td><strong>Average Replacement Costs</strong></td>
                                             <td><strong>
                                                 {{ avgReplCost(rscVars,rhcVars,rARC) | currency }}
@@ -284,7 +284,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <table class="table table-striped">
+                            <table class="table table-striped bolder">
                                 <thead>
                                     <tr>
                                         <th>Total Cost of Ownership (Five Year)</th>
@@ -332,7 +332,7 @@
                                             </td>
                                             <td>{{ nscVars[i].industry }}</td>
                                         </tr>
-                                        <tr>
+                                        <tr class="bolder">
                                             <td><strong>
                                                 Productivity loss from hardware
                                                 failure</strong></td>
@@ -360,7 +360,7 @@
                                             </td>
                                             <td>{{ nscVars[i].industry }}</td>
                                         </tr>
-                                        <tr>
+                                        <tr class="bolder">
                                             <td><strong>IT Support for HW Downtime</strong></td>
                                             <td><strong>
                                                 {{ itSupportHWDown(nscVars) | currency }}
@@ -386,7 +386,7 @@
                                             </td>
                                             <td>{{ nscVars[i].industry }}</td>
                                         </tr>
-                                        <tr>
+                                        <tr class="bolder">
                                             <td><strong>Average Replacement Costs</strong></td>
                                             <td><strong>
                                                 {{ avgReplCost(nscVars,nhcVars,nARC) | currency }}
@@ -409,7 +409,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <table class="table table-striped">
+                            <table class="table table-striped bolder">
                                 <thead>
                                     <tr>
                                         <th>Total Cost of Ownership (Five Year)</th>
