fused their existing theme in, sort of

--- a/tco/views/main.html
+++ b/tco/views/main.html
@@ -1,3 +1,14 @@
+<div id="foxboro_body" class="one-column">
+    <div id="">
+        <div id="foxboro_header">
+            <span class="logo">
+                <a id="XploreTech" href="http://www.xploretech.com">
+                    <img id="SiteTitleArea" border="0" alt="the world%27s most
+                    rugged tablet computers" src="http://www.xploretech.com/Portals/212350/images/xplore_logo.png">
+                </a>
+            </span>
+        </div>
+    </div>
 <div class="row">
     <div class="col-md-12">
         <div class="page-header">
@@ -434,7 +445,7 @@
         </div><!-- .row -->
     </div><!-- right column -->
 </div><!-- outer row -->
-
+</div>
 <nav class="navbar navbar-default navbar-fixed-bottom" id="savings-bar">
     <div class="container">
         <p class="huge"><strong>Annual Savings: {{ savings() }} %</strong></p>
