--- a/essays/style.css
+++ b/essays/style.css
@@ -14,6 +14,11 @@ div#content {
     margin-bottom: 25px;
 }
 
+div#content h2 {
+    padding-bottom: 15px;
+    border-bottom: 1px solid #e5e5e5;
+}
+
 div#content img {
     display: block;
     margin-left: auto;
