--- a/essays/templates/template.md.html
+++ b/essays/templates/template.md.html
@@ -20,6 +20,12 @@ $title$
     <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
 
     <link href="style.css" rel="stylesheet">
+    <style type="text/css">
+
+        div#toc-wrapper ul, div#toc-wrapper ol {
+            list-style: none;
+        }
+    </style>
   </head>
 
   <body>
@@ -54,7 +60,14 @@ $title$
         <p class="lead">
 $lead$
         </p>
+$if(toc)$
+<div id="toc-wrapper">
+<h2>Contents</h2>
+$toc$
+</div>
+$endif$
         </div>
+
       <div class="row">
         <div id="content" class="col-md-12 col-lg-10 col-lg-offset-1">
 $body$
