--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,8 @@ pre {
     margin: 0 auto;
     background-color: #f7f7f7;
     padding: 10.5px;
+    width: inherit;
+    overflow: scroll;
 }
 
 div.row {
