--- a/essays/templates/template.md.html
+++ b/essays/templates/template.md.html
@@ -49,7 +49,7 @@ code > span.er { font-weight: bold; }
                       <span class="glyphicon glyphicon-envelope"></span>
                       Send me an email!</a></li>
               <li>
-                  <a href="gatlin.gpg">PGP</a>
+                  <a href="/gatlin.gpg">PGP</a>
               </li>
               <li>
                   <a href="/">Home</a> /
@@ -80,7 +80,7 @@ $body$
 
 
       <div id="footer">
-        <p>&copy; 2013-2016. Theme lovingly stolen from other people.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson.</p>
       </div>
 
     </div> <!-- /container -->
