--- a/essays/templates/template.md.html
+++ b/essays/templates/template.md.html
@@ -80,7 +80,7 @@ $body$
 
 
       <div id="footer">
-          <p>&copy; 2013-2016 Gatlin Johnson.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson</p>
       </div>
 
     </div> <!-- /container -->
