--- a/essays/templates/template.md.html
+++ b/essays/templates/template.md.html
@@ -80,10 +80,12 @@ $body$
 
 
       <div id="footer">
-          <p>&copy; 2013-2016 Gatlin Johnson.</p>
+          <p>&copy; 2013-2016 Gatlin Johnson</p>
       </div>
 
     </div> <!-- /container -->
-
+    $for(scripts)$
+    <script src="$scripts$"></script>
+    $endfor$
   </body>
 </html>
